# journal-cli

./: .gitignore  CMakeLists.txt  COPYRIGHT  Dockerfile  LICENSE-MIT  README.md  main.cpp  vcpkg.json
.github/workflows/: cmake.yml  docker-image.yml  docker-push.yml  docker-test.yml
app/: main.cpp
app/includes/src/: page.cpp
include/: prelude.hpp
include/app/: menu.h  menu.hpp
include/input/: input.hpp
include/journal/: journal.h  journal.hpp  page.h  page.hpp
include/menu/: menu.h
include/utility/: utility.hpp
includes/: clist.h  journal.h  menu.h  page.h
includes/journal/: page.h
includes/src/: clist.cpp  journal.cpp  menu.cpp  page.cpp
source/: main.cpp  main.cxx
source/app/: menu.cpp  menu.cxx
source/input/: input.hpp  input.txx
source/journal/: journal.cpp  journal.cxx  page.cpp  page.cxx
source/menu/: menu.cpp
source/utility/: utility.cxx
src/: main.cpp
src/includes/: journal.h  menu.h  page.h
src/includes/src/: journal.cpp  menu.cpp  page.cpp
src/journal/: journal.cpp  page.cpp
src/menu/: menu.cpp  menu.h
src/menu/src/: menu.cpp
src/test/: test.cpp  test.h
test/: journal_test.cxx  journal_test.hpp  test.cpp  test.cxx  test.h  test.hpp
test/journal/: journal_test.cxx  journal_test.hpp
